# project-orchestrator

./: .env.example  .env.production.example  .gitignore  .po-config  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  PLAN_MCP_CLAUDE.md  PLAN_OPENAPI.md  README.md  SKILL.md  codecov.yml  config.m2-test.yaml  config.yaml.example  deny.toml  docker-compose.production.yml  docker-compose.test-m2.yml  docker-compose.yml  install.ps1  install.sh  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
crates/neural-routing-gnn/: Cargo.toml
crates/neural-routing-gnn/src/: encoder.rs  features.rs  graph_sage.rs  inference.rs  lib.rs  message_passing.rs  rgcn.rs  sampler.rs  training.rs
crates/neural-routing-gnn/src/benchmark/: metrics.rs  mod.rs  statistical.rs
crates/neural-routing-gnn/tests/: benchmark_gnn_vs_voyage.rs
crates/neural-routing-nn/: Cargo.toml
crates/neural-routing-nn/src/: benchmark.rs  lib.rs  metrics.rs  router.rs  scoring.rs
crates/neural-routing-policy/: Cargo.toml
crates/neural-routing-policy/src/: ab_testing.rs  action_decoder.rs  benchmark.rs  codebook.rs  cql.rs  dataloader.rs  dataset.rs  evaluation.rs  ewc.rs  lib.rs  registry.rs  training.rs  transformer.rs
crates/neural-routing-runtime/: Cargo.toml
crates/neural-routing-runtime/src/: collector.rs  confidence.rs  config.rs  continual.rs  drift.rs  dual_track.rs  exploration.rs  inference_engine.rs  lib.rs  reward.rs
crates/tree-sitter-dart/: Cargo.toml  build.rs
crates/tree-sitter-dart/src/: lib.rs  node-types.json  scanner.c
crates/tree-sitter-hcl/: Cargo.toml  build.rs
crates/tree-sitter-hcl/src/: lib.rs
desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  splash.html  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  remote.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/nsis/: hooks.nsh
desktop/src-tauri/src/: docker.rs  main.rs  setup.rs  tray.rs  updater.rs
desktop/src-tauri/src/plugins/: mac_rounded_corners.rs  mod.rs
docs/api/: mcp-tools.md  reference.md
docs/guides/: advanced-knowledge-fabric.md  authentication.md  chat-websocket.md  foundation-kit.md  getting-started.md  protocols.md
docs/integrations/: claude-code.md  cursor.md  openai.md
docs/setup/: installation.md
hooks/: e2e-test.sh  install.sh  pre-tool-use.cjs  pre-tool-use.test.cjs  session-start.sh
init/neo4j/: init.cypher
migrations/: 001_user_auth_provider.cypher
packaging/debian/: docker-compose.services.yml  postinst  postrm  prerm  project-orchestrator.service
packaging/homebrew/: project-orchestrator.rb
packaging/rpm/: postinst.sh
scripts/: build-desktop.sh  seed-rfc-knowledge.sh  seed-rfc-lifecycle-protocol.sh  seed-rfc-skill.sh  serve.sh
src/: cli.rs  homeostasis.rs  lib.rs  main.rs  setup_claude.rs  test_helpers.rs  update.rs  utils.rs
src/analytics/: distribution.rs  hypothesis.rs  mod.rs
src/api/: auth_handlers.rs  blueprint_handlers.rs  chat_handlers.rs  code_handlers.rs  embedded_frontend.rs  episode_handlers.rs  feedback_handlers.rs  graph_types.rs  handlers.rs  hook_handlers.rs  mcp_federation_handlers.rs  mod.rs  neural_routing_handlers.rs  note_handlers.rs  persona_handlers.rs  profile_handlers.rs  project_handlers.rs  protocol_handlers.rs  query.rs  reason_handlers.rs  registry_handlers.rs  rfc_handlers.rs  routes.rs  sharing_handlers.rs  skill_handlers.rs  trajectory_handlers.rs  trigger_handlers.rs  workspace_handlers.rs  ws_auth.rs  ws_chat_handler.rs  ws_handlers.rs  ws_run_handler.rs
src/auth/: extractor.rs  google.rs  jwt.rs  middleware.rs  mod.rs  oidc.rs  refresh.rs
src/blueprint/: mod.rs
src/chat/: cli_auth.rs  cli_version.rs  compaction_context.rs  composer.rs  config.rs  continuity.rs  drain.rs  enrichment.rs  entity_extractor.rs  feedback.rs  manager.rs  mod.rs  model_catalog.rs  observation_detector.rs  oob_listener.rs  path_detect.rs  post_stream.rs  post_tool_hook.rs  prompt.rs  prompt_sections.rs  routing.rs  skill_hook.rs  types.rs  viz.rs  viz_builder.rs
src/embeddings/: fastembed.rs  mock.rs  mod.rs  provider.rs  traits.rs
src/episodes/: anonymize.rs  artifact_comparison.rs  collector.rs  distill.rs  distill_models.rs  evaluation.rs  mod.rs  models.rs
src/events/: builtin_triggers.rs  bus.rs  graph.rs  hybrid.rs  mod.rs  nats.rs  notifier.rs  reactions.rs  reactor.rs  trigger.rs  trigger_routing.rs  types.rs
src/feedback/: handlers.rs  mod.rs  models.rs  propagator.rs  signals.rs  tracker.rs
src/graph/: algorithms.rs  confidence.rs  debouncer.rs  engine.rs  enrichment.rs  extraction.rs  mock.rs  mod.rs  models.rs  process.rs  writer.rs
src/heartbeat/: engine.rs  mod.rs
src/identity/: did.rs  mod.rs  rotation.rs  token.rs
src/lifecycle/: executor.rs  mod.rs  models.rs
src/mcp/: formatter.rs  handlers.rs  http_client.rs  mod.rs  pipeline_handler.rs  protocol.rs  server.rs  tools.rs
src/mcp_federation/: circuit_breaker.rs  client.rs  discovery.rs  mod.rs  prober.rs  registry.rs  security.rs
src/meilisearch/: client.rs  impl_search_store.rs  indexes.rs  mock.rs  mod.rs  traits.rs
src/neo4j/: agent_execution.rs  alert.rs  analytics.rs  batch.rs  chat.rs  client.rs  code.rs  commit.rs  constraint.rs  decision.rs  event_trigger.rs  feature_graph.rs  impl_graph_store.rs  lifecycle_hook.rs  mcp_federation.rs  milestone.rs  mock.rs  mod.rs  models.rs  note.rs  persona.rs  plan.rs  plan_run.rs  profile.rs  project.rs  protocol.rs  reasoning.rs  registry.rs  release.rs  sharing.rs  skill.rs  step.rs  task.rs  topology.rs  traits.rs  trigger.rs  user.rs  workspace.rs
src/neurons/: activation.rs  config.rs  intent.rs  mod.rs  search.rs
src/notes/: hashing.rs  lifecycle.rs  manager.rs  mod.rs  (+2 more)
tests/: api_tests.rs  cancel_task_e2e.rs  cancel_tools_e2e.rs  hooks_integration.rs  integration_tests.rs  m2_bridge_test.sh  mcp_federation_integration.rs  p2p_http_exchange.rs  p2p_integration.rs  parser_tests.rs  workspace_tests.rs
(+183 files in other folders)
