[package]
name = "neural-routing-gnn"
version = "0.1.0"
edition = "2021"
description = "GNN models (R-GCN + GraphSAGE) for neural route learning — candle-based"
license = "MIT AND BUSL-1.1"

[dependencies]
neural-routing-core = { path = "../neural-routing-core" }

# Workspace shared
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

# Neo4j — for graph sampling
neo4rs = { workspace = true }

# Caching — LRU for subgraph cache, moka for concurrent inference cache
lru = "0.16"
moka = { version = "0.12", features = ["sync"] }

# ML — always compiled (build full, runtime-controlled)
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
