[package]
name = "neural-routing-nn"
version = "0.1.0"
edition = "2021"
description = "Nearest Neighbor Router — permanent fallback for neural route learning"
license = "MIT AND BUSL-1.1"

[dependencies]
neural-routing-core = { path = "../neural-routing-core" }

# Workspace shared
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

# Cache
moka = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
