[package]
name = "neural-routing-policy"
version = "0.1.0"
edition = "2021"
description = "Decision Transformer + CQL policy network for neural route learning — candle-based"
license = "MIT AND BUSL-1.1"

[dependencies]
neural-routing-core = { path = "../neural-routing-core" }

# Workspace shared
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

# ML — always compiled (build full, runtime-controlled)
candle-core = { workspace = true }
candle-nn = { workspace = true }
safetensors = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
